Update for indices to be added to columns

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
   "scripts": {
     "post-autoload-dump": [
       "@php ./vendor/bin/testbench package:discover --ansi"
-    ]
+    ],
+    "test": ["vendor/bin/phpunit"]
   }
 }
