--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,10 +9,15 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Setup nightly PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
 
     - name: Cache Composer packages
       id: composer-cache
