--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
   ],
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/support": "^8.36",
-    "illuminate/console": "^8.36",
-    "illuminate/database": "^8.36",
-    "illuminate/config": "^8.36"
+    "illuminate/support": "^6.0|^7.0|^8.0",
+    "illuminate/console": "^6.0|^7.0|^8.0",
+    "illuminate/database": "^6.0|^7.0|^8.0",
+    "illuminate/config": "^6.0|^7.0|^8.0"
   },
   "autoload": {
     "psr-4": {
