Trying out github pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-cayman
+remote_theme: pmarsceill/just-the-docs
+compress_html:
+  ignore:
+    envs: all
+aux_links:
+  "View on GitHub":
+    - "//github.com/bennett-treptow/laravel-migration-generator"
