--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [bennett-treptow]
-custom: ['buymeacoffee.com/btreptow']
+custom: ['https://buymeacoffee.com/btreptow']
