--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "illuminate/support": "^6.0|^7.0|^8.0",
     "illuminate/console": "^6.0|^7.0|^8.0",
     "illuminate/database": "^6.0|^7.0|^8.0",
-    "illuminate/config": "^6.0|^7.0|^8.0"
+    "illuminate/config": "^6.0|^7.0|^8.0",
+    "clue/graph": "^0.9.2",
+    "graphp/graphviz": "^0.2.2"
   },
   "autoload": {
     "psr-4": {
