--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "illuminate/console": "^6.0|^7.0|^8.0",
     "illuminate/database": "^6.0|^7.0|^8.0",
     "illuminate/config": "^6.0|^7.0|^8.0",
-    "clue/graph": "^0.9.2"
+    "marcj/topsort": "^2.0"
   },
   "autoload": {
     "psr-4": {
