--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "illuminate/support": "^6.0|^7.0|^8.0",
     "illuminate/console": "^6.0|^7.0|^8.0",
     "illuminate/database": "^6.0|^7.0|^8.0",
-    "illuminate/config": "^6.0|^7.0|^8.0"
+    "illuminate/config": "^6.0|^7.0|^8.0",
+    "marcj/topsort": "^2.0"
   },
   "autoload": {
     "psr-4": {
