--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "autoload": {
     "psr-4": {
-      "LaravelMigrationGenerator\\": "src/"
+      "BennettTreptow\\LaravelMigrationGenerator\\": "src/"
     }
   },
   "autoload-dev": {
