--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/console": "^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/database": "^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/config": "^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/console": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/database": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/config": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "marcj/topsort": "^2.0"
     },
     "autoload": {
@@ -28,7 +28,7 @@
         }
     },
     "require-dev": {
-        "orchestra/testbench": "^6.17|^8.0",
+        "orchestra/testbench": "^6.17|^8.0|^9.0",
         "friendsofphp/php-cs-fixer": "^2.16|^3.14"
     },
     "scripts": {
