--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.17|^8.0|^9.0",
-        "friendsofphp/php-cs-fixer": "^2.16|^3.14"
+        "laravel/pint": "^1.15"
     },
     "scripts": {
         "post-autoload-dump": [
@@ -38,7 +38,7 @@
         "test": [
             "vendor/bin/phpunit"
         ],
-        "lint": "vendor/bin/php-cs-fixer fix"
+        "lint": "vendor/bin/pint"
     },
     "extra": {
         "laravel": {
