--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: "${{ runner.os }}-php-${{ matrix.php }}-${{ hashFiles('**/composer.json') }}"
+          key: "${{ runner.os }}-php-${{ matrix.php }}-${{ hashFiles('**/composer.lock') }}"
           restore-keys: |
             ${{ runner.os }}-php-${{ matrix.php }}-
 
