Still have to remove pint for php 7.4

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,6 +32,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php-${{ matrix.php }}-
 
+      - name: Remove pint if not PHP 8.1
+        run: |
+          if [ '${{ matrix.php }}' != '8.1' ]; then
+            composer remove laravel/pint --dev
+          fi
+
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
 
