Upgrade to Laravel 12 (#97)

--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.4|~8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "illuminate/console": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "illuminate/database": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "illuminate/config": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "php": "^7.4|^8.0|^8.1|^8.2|^8.3|^8.4",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/console": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/database": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/config": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
         "marcj/topsort": "^2.0"
     },
     "autoload": {
@@ -28,7 +28,7 @@
         }
     },
     "require-dev": {
-        "orchestra/testbench": "^6.17|^8.0|^9.0",
+        "orchestra/testbench": "^6.17|^8.0|^9.0|^10.0",
         "laravel/pint": "^1.15"
     },
     "scripts": {
